# 86boxman

./: BoxManSettings.cpp  BoxManSettings.h  CMakeLists.txt  MainWindow.ui  README.md  boxman.cpp  boxman.h  main.cpp
.github/workflows/: cmake.yml
res/: 86boxman.desktop  AppRun
src/: BoxManSettings.cpp  BoxManSettings.h  BoxManSettings.ui  BoxManSettingsUi.cpp  BoxManSettingsUi.h  BoxManSettingsUi.ui  CreateMachine.cpp  CreateMachine.h  CreateMachine.ui  MainWindow.ui  boxman.cpp  boxman.h  main.cpp
